# you-skill

./: .gitignore  .prettierignore  .prettierrc  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  README_ZH.md  SIGNING.md  index.html  package-lock.json  package.json  svelte.config.js  tailwind.config.cjs  tsconfig.json  vite.config.js
.github/workflows/: release.yml
.myapp/skills/: browser-use
docs/: SIGNING.md  UPDATER.md
scripts/: release.sh
src/: App.svelte  app.css  app.html  main.js  main.ts
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent_apps.rs  config.rs  main.rs  models.rs  paths.rs  tray.rs
src-tauri/src/commands/: agent_apps.rs  agents.rs  backup.rs  install.rs  manage.rs  mod.rs  remote.rs  scan.rs  settings.rs  skill.rs  skill_lock.rs  update.rs  user_projects.rs
src-tauri/src/models/: agent_app.rs  mod.rs  skill.rs  user_project.rs
src-tauri/src/services/: agent_apps_service.rs  ai_service.rs  backup_service.rs  install_service.rs  manage_service.rs  mod.rs  native_skill_lock_service.rs  project_skill_lock_service.rs  remote_service.rs  scan_service.rs  skill_lock_service.rs  skill_service.rs  translate_service.rs  user_projects_service.rs
src-tauri/src/utils/: file.rs  folder.rs  github.rs  mod.rs  path.rs  str.rs  time.rs  zip.rs
src/lib/: i18n.ts  tauri.js  tauri.ts
src/lib/api/: agent-apps.ts  index.ts  settings.ts  skill-lock.ts  skills.ts  user-projects.ts
src/lib/components/: AddAgentAppModal.svelte  AddScanRootPanel.svelte  (+29 more)
src/routes/: +layout.svelte  +page.svelte
(+13 files in other folders)
