[package]
name = "skill-kit"
version = "0.1.0"
description = "Skill manager desktop app"
authors = ["skill-kit"]
edition = "2021"
build = "build.rs"

[dependencies]
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
walkdir = "2"
dirs-next = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
zip = "2"
dirs = "5"
chrono = "0.4"

[build-dependencies]
tauri-build = { version = "2", features = [] }
