[package]
name = "you-skill"
version = "0.1.3"
description = "Skill manager desktop app"
authors = ["gumpwang2020@gmail.com"]
edition = "2021"
build = "build.rs"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
walkdir = "2"
dirs-next = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
zip = "2"
dirs = "5"
chrono = "0.4"
image = "0.25"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"

[build-dependencies]
tauri-build = { version = "2", features = [] }
